# ncfa_expts

./: .gitignore  README.md  config.yaml  devenv.nix  mercury_test.sh  notes.org  pyproject.toml  requirements.txt
results/: handpicked_boxplot.csv  heatmap.csv  random_boxplot.csv
workflow/: .gitignore  Snakefile
workflow/envs/: basic_ml.yaml  causal-learn.yaml  causalvae.yaml  config.yaml  gp.yaml  medil.yaml  plot.yaml
workflow/scripts/: boxplot.py  calculate_sfd.py  compute_loss.py  cross_validate_ncfa.py  cross_validation_ncfa.py  eval_grid.py  fit_causalvae.py  fit_dear.py  fit_diff_disco.py  fit_fci.py  fit_medil.py  fit_ncfa.py  fit_xi1pc.py  gaussian_data.py  generate_data.py  gp_data.py  handpicked_boxplot.py  heatmap.py  join_csv.py  model_select_ncfa.py  random_boxplot.py  sfd_cross_validated.py  true_biadj.py  true_params.py
