[project]
name = "ncfa-expts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "causal-learn>=0.1.3.8",
    "gcastle>=1.0.3",
    "medil",
    "networkx==2.8.8",
    "seaborn>=0.13.2",
    "snakefmt>=0.10.2",
    "snakemake-executor-plugin-slurm>=0.11.1",
    "snakemake>=8.25.0",
]

[tool.uv.sources]
medil = { git = "https://gitlab.com/alex-markham/medil", rev = "develop" }
